- changed PHP requirement to PHP 5.6+ and PHP 7+ (Thorsten)
- added PHP namespaces (Thorsten)
- added LDAP configuration frontend (Thorsten)
- added configuration for enable/disable XML sitemap (Thorsten)
- added support for category images (Thorsten)
- added support for categories on homepage (Thorsten)
- added image slider template (Thorsten)
- added improved attachment overview (Thorsten)
- improved REST/JSON API including login (Thorsten)
- improved sticky records (Thorsten)
- switch CSS development from LESS to SCSS (Thorsten)
- template variable syntax compatible with Twig/Handlebars (Thorsten)
- updated bundled SwiftMailer to version 5.4.8 (Thorsten)
- updated bundled Elasticsearch client to version 2.2.1 (Thorsten)
- updated bundled Bootstrap to version 4.0.0-beta.3 (Thorsten)
- updated bundled Font Awesome to version 4.7.0 (Thorsten)
- updated bundled jQuery to version 3.2.1 (Thorsten)
- updated bundled jQuery datePicker plugin to version 1.6.4 (Thorsten)
- updated bundled Typeahead.js to version CoreJS Typeahead 1.2.1 (Thorsten)
- updated bundled Handlebars to version 4.0.5 (Thorsten)
- updated bundled HighlightJS to version 9.10.0 (Thorsten)
- updated bundled Mermaid to version 6.0.0 (Thorsten)
- updated bundled jQuery Sparklines to version 2.3.2 (Thorsten)
- updated bundled TinyMCE to version 4.6.4 (Thorsten)
- removed translation admin frontend (Thorsten)
- removed support for ext/mssql (Thorsten)
- removed bundled Symfony ClassLoader (Thorsten)
- removed Bower, now using NPM/Yarn only (Thorsten)

Version 2.9.9 - 2017-10-19
- fixed multiple XSS and CSRF vulnerabilities (Thorsten)
- updated bundled Bootstrap to version 3.3.7 (Thorsten)
- updated bundled Font Awesome to version 4.7.0 (Thorsten)
- updated bundled TinyMCE to version 4.5.7 (Thorsten)
- updated bundled HighlightJS to version 9.12.0 (Thorsten)
- fixed minor bugs (Thorsten)

Version 2.9.8 - 2017-07-12
- fixed improper restriction (Thorsten)
- add LDAP search in sub groups (Thorsten)