@@ -191,18 +191,16 @@ require K_PATH_MAIN.'/tcpdf.php';
 
 /**
  * @category  phpMyFAQ
- *
  * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
  * @author    Peter Beauvain <pbeauvain@web.de>
  * @author    Olivier Plathey <olivier@fpdf.org>
  * @author    Krzysztof Kruszynski <thywolf@wolf.homelinux.net>
  * @copyright 2004-2018 phpMyFAQ Team
  * @license   http://www.mozilla.org/MPL/2.0/ Mozilla Public License Version 2.0
- *
  * @link      http://www.phpmyfaq.de
  * @since     2004-11-21
  */
-class Wrapper extends TCPDF
+class Wrapper extends \TCPDF
 {
     /**
      * With or without bookmarks.
