@@ -14,7 +14,8 @@ Version 3.0.0-alpha2 - 2018-01-
 - added support for categories on homepage (Thorsten)
 - added image slider template (Thorsten)
 - added improved attachment overview (Thorsten)
-- improved REST/JSON API including login (Thorsten)
+- added HTML5 export (Thorsten)
+- improved REST API including login (Thorsten)
 - improved sticky records (Thorsten)
 - switch CSS development from LESS to SCSS (Thorsten)
 - template variable syntax compatible with Twig/Handlebars (Thorsten)
@@ -31,6 +32,7 @@ Version 3.0.0-alpha2 - 2018-01-
 - updated bundled jQuery Sparklines to version 2.3.2 (Thorsten)
 - updated bundled TinyMCE to version 4.6.4 (Thorsten)
 - removed translation admin frontend (Thorsten)
+- removed XHTML export (Thorsten)
 - removed support for ext/mssql (Thorsten)
 - removed bundled Symfony ClassLoader (Thorsten)
 - removed Bower, now using NPM/Yarn only (Thorsten)
